# all-txt-textbox

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  docker-compose.yaml  docker-swarm.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: api.py  settings.py
backend/src/database/: session.py
backend/src/database/migrations/: env.py
backend/src/database/migrations/data/: gender-dictionary.yaml
backend/src/database/migrations/versions/: 0001_create_requests_table.py  0002_create_salts_table.py  0003_create_gender_dictionary_tables.py  0004_seed_gender_dictionary_tables.py  0005_create_api_key_table.py
backend/src/dependencies/: __init__.py  rate_limiter.py  session.py
backend/src/models/: __init__.py  api_key.py  gender_dictionary.py  requests.py  salts.py
backend/src/pipelines/: __init__.py  gender_neutralizer.py  pipeline.py  spell_checker.py
webapp/: .env.production  Dockerfile  components.d.ts  index.html  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json
webapp/src/: App.vue
webapp/src/api/: index.ts
webapp/src/api/client/: ApiClient.ts  schemas.gen.ts  services.gen.ts  types.gen.ts
webapp/src/components/: WelcomeDialog.vue
webapp/src/pages/: index.vue
webapp/src/styles/: fonts.css  settings.scss
